add json file