@@ -1,17 +1,19 @@
 package com.grit.frontend.controller;
 
 import com.grit.backend.controller.TaskController;
+import com.grit.backend.repository.InMemoryTaskRepository;
+import com.grit.backend.service.InMemoryTaskService;
+import com.grit.backend.service.TaskService;
+import com.grit.model.Task;
 import javafx.collections.FXCollections;
 import javafx.fxml.FXML;
 import javafx.scene.control.*;
-import com.grit.model.Task;
+
 import java.util.List;
 import java.util.logging.Logger;
-import com.grit.frontend.util.LoggerUtil;
 
 public class ToDoController {
-
-    private static final Logger logger = LoggerUtil.getLogger(ToDoController.class.getName()); // Logger
+    private static final Logger LOGGER = Logger.getLogger(ToDoController.class.getName());
 
     @FXML
     private TableView<Task> taskTableView;
@@ -21,7 +23,6 @@ public class ToDoController {
     private TableColumn<Task, String> descriptionColumn;
     @FXML
     private TableColumn<Task, Boolean> completedColumn;
-
     @FXML
     private TextField descriptionField;
     @FXML
@@ -29,134 +30,100 @@ public class ToDoController {
     @FXML
     private Button saveButton;
 
-    private TaskController taskController;
+    private final TaskController taskController;
     private Task selectedTask;
 
     public ToDoController() {
-        // Initialize TaskController from backend
-        taskController = new TaskController();
+        // Pass the TaskService instance to the TaskController constructor
+        TaskService taskService = new InMemoryTaskService(new InMemoryTaskRepository());
+        this.taskController = new TaskController(taskService); // Provide the TaskService
     }
 
     @FXML
     public void initialize() {
-        // Initialize columns
+        LOGGER.info("Initializing ToDoController...");
         idColumn.setCellValueFactory(cellData -> cellData.getValue().idProperty().asObject());
         descriptionColumn.setCellValueFactory(cellData -> cellData.getValue().descriptionProperty());
         completedColumn.setCellValueFactory(cellData -> cellData.getValue().completedProperty().asObject());
-
-        // Load data from the backend
         loadTasksFromBackend();
-
-        // Add demo data if the backend is empty
-        if (taskController.getAllTasks().isEmpty()) {
-            addDemoData();
-        }
-
-        // Add selection listener for TableView
-        taskTableView.getSelectionModel().selectedItemProperty().addListener((observable, oldValue, newValue) -> {
-            if (newValue != null) {
-                selectedTask = newValue;
-                descriptionField.setText(selectedTask.getDescription());
-                checkBox.setSelected(selectedTask.isCompleted());
-                saveButton.setVisible(false);
-            }
-        });
     }
 
     private void loadTasksFromBackend() {
-        logger.info("Loading tasks from backend...");
-        List<Task> tasks = taskController.getAllTasks(); // Get tasks from backend
-        taskTableView.setItems(FXCollections.observableArrayList(tasks)); // Load tasks into TableView
-        logger.info("Loaded " + tasks.size() + " tasks from backend.");
-    }
-
-    private void addDemoData() {
-        logger.info("Adding demo data as backend is empty.");
-        // Adding demo tasks directly to the backend (mock behavior)
-        taskController.createTask("Finish JavaFX tutorial", false);
-        taskController.createTask("Buy groceries", false);
-        taskController.createTask("Clean the house", true);
-        loadTasksFromBackend(); // Reload tasks after adding demo data
-        logger.info("Demo data added successfully.");
+        List<Task> tasks = taskController.getAllTasks();
+        if (tasks != null && !tasks.isEmpty()) {
+            taskTableView.setItems(FXCollections.observableArrayList(tasks));
+            LOGGER.info("Loaded " + tasks.size() + " tasks.");
+        } else {
+            LOGGER.warning("No tasks available.");
+        }
     }
 
     @FXML
     public void handleAddTask() {
         String description = descriptionField.getText();
-        boolean isCompleted = checkBox.isSelected();
-
-        if (description == null || description.trim().isEmpty()) {
-            logger.warning("Attempted to add a task with an empty description.");
+        if (description.isBlank()) {
             showAlert(Alert.AlertType.ERROR, "Description cannot be empty.");
             return;
         }
 
-        // Add task via backend and reload tasks
-        logger.info("Adding new task with description: " + description + " and completed status: " + isCompleted);
-        taskController.createTask(description, isCompleted);
+        boolean isCompleted = checkBox.isSelected();
+        // Generate a unique ID for the new task
+        int nextId = taskController.getNextTaskId();
+        taskController.createTask(description, isCompleted, nextId);  // Pass the ID
         loadTasksFromBackend();
-
-        descriptionField.clear();
-        checkBox.setSelected(false);
+        clearForm();
     }
+
 
     @FXML
     public void handleEditTask() {
         if (selectedTask == null) {
-            logger.warning("Attempted to edit a task with no task selected.");
-            showAlert(Alert.AlertType.WARNING, "Please select a task to edit.");
+            showAlert(Alert.AlertType.WARNING, "Select a task to edit.");
             return;
         }
-
         descriptionField.setText(selectedTask.getDescription());
         checkBox.setSelected(selectedTask.isCompleted());
         saveButton.setVisible(true);
-        logger.info("Task selected for editing: ID=" + selectedTask.getId() + ", Description=" + selectedTask.getDescription());
     }
 
     @FXML
     public void handleSaveTask() {
         if (selectedTask == null) {
-            logger.warning("Attempted to save a task with no task selected.");
-            showAlert(Alert.AlertType.WARNING, "Please select a task to save.");
+            showAlert(Alert.AlertType.WARNING, "No task selected to save.");
             return;
         }
 
-        String newDescription = descriptionField.getText();
-        boolean isCompleted = checkBox.isSelected();
+        String description = descriptionField.getText();
+        if (description.isBlank()) {
+            showAlert(Alert.AlertType.ERROR, "Description cannot be empty.");
+            return;
+        }
 
-        // Update task in backend
-        logger.info("Saving updated task with ID: " + selectedTask.getId() + ", New Description: " + newDescription + ", New Completed status: " + isCompleted);
-        taskController.updateTask(selectedTask.getId(), newDescription, isCompleted);
+        taskController.updateTask(selectedTask.getId(), description, checkBox.isSelected());
         loadTasksFromBackend();
-
-        showAlert(Alert.AlertType.INFORMATION, "Task updated successfully!");
-
-        descriptionField.clear();
-        checkBox.setSelected(false);
-        saveButton.setVisible(false);
+        clearForm();
     }
 
     @FXML
     public void handleDeleteTask() {
         if (selectedTask == null) {
-            logger.warning("Attempted to delete a task with no task selected.");
-            showAlert(Alert.AlertType.WARNING, "Please select a task to delete.");
+            showAlert(Alert.AlertType.WARNING, "No task selected to delete.");
             return;
         }
 
-        // Delete task via backend
-        logger.info("Deleting task with ID: " + selectedTask.getId());
         taskController.deleteTask(selectedTask.getId());
         loadTasksFromBackend();
+    }
 
-        showAlert(Alert.AlertType.INFORMATION, "Task deleted successfully!");
+    private void clearForm() {
+        descriptionField.clear();
+        checkBox.setSelected(false);
+        saveButton.setVisible(false);
+        selectedTask = null;
     }
 
     private void showAlert(Alert.AlertType type, String message) {
         Alert alert = new Alert(type);
-        alert.setTitle("Notification");
-        alert.setHeaderText(null);
         alert.setContentText(message);
         alert.showAndWait();
     }
